<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quiz</string>
    <string name="initialization">Initialization</string>
    <string name="q_u_i_z">Q U I Z</string>
    <string name="play_this_game_to_review_reading_dear_salsabilla_all_the_hard_work_you_have_put_all_the_sacrifice_you_have_made_has_finally_paid_off">Play this game to review Reading. Dear Salsabilla, All the hard work you have put, all the sacrifice you have made, has finally paid off.</string>
    <string name="total_questions">Total Questions</string>
    <string name="your_last_score">Your Last Score</string>
    <string name="loading_quiz">Loading Quiz</string>
    <string name="question">Question</string>
    <string name="q">Q</string>
    <string name="_10">10</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="option_button">Option Button</string>
    <string name="verifying_answer">Verifying Answer</string>
    <string name="next_question">Next Question</string>
    <string name="dififcult">Dififculty</string>
    <string name="go_to_home">Go To Home</string>
    <string name="result">Result</string>
    <string name="_100">100%</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="question_missed">Question Missed</string>
    <string name="na">Na</string>
    <string name="correct_canswer">Correct Answer</string>
    <string name="beginnerr">Beginner</string>
    <string name="_6">6</string>
    <string name="start_quiz">Start</string>
    <string name="view_quiz">View Quiz</string>
    <string name="a_quiz_of_words">A Quiz of Words</string>
    <string name="_1">1</string>
    <string name="new_question">New question</string>
    <string name="op1">op1</string>
    <string name="op2">op2</string>
    <string name="op3">op3</string>
</resources>