<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.baig.quiz.fragments.FragmentQuestions" />

        <variable
            name="viewModel"
            type="com.baig.quiz.viewmodel.FragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="?colorOnPrimary"
        tools:context=".ui.activities.MainActivity">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/quiz_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@drawable/ic_down_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/snap_bold_extra"
            android:gravity="center"
            android:text="@string/a_quiz_of_words"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_close_button" />

        <TextView
            android:id="@+id/quiz_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/question"
            app:layout_constraintEnd_toEndOf="@+id/quiz_close_button"
            app:layout_constraintStart_toStartOf="@+id/quiz_title"
            app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

        <TextView
            android:id="@+id/quiz_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/snap_bold_extra"
            android:text="@string/_1"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/quiz_question"
            app:layout_constraintStart_toStartOf="@+id/quiz_question"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question" />

        <ProgressBar
            android:id="@+id/quiz_question_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_marginTop="32dp"
            android:indeterminateTint="?colorSecondary"
            android:progress="100"
            android:progressDrawable="@drawable/circle_rotate"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_question_number"
            app:layout_constraintEnd_toEndOf="@+id/quiz_title"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/quiz_close_button"
            app:layout_constraintTop_toBottomOf="@+id/quiz_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/quiz_question_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_question_progress"
            app:layout_constraintEnd_toEndOf="@+id/quiz_question_progress"
            app:layout_constraintStart_toStartOf="@+id/quiz_question_progress"
            app:layout_constraintTop_toTopOf="@+id/quiz_question_progress" />

        <TextView
            android:id="@+id/quiz_question_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/new_question"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quiz_option_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/op1"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question_new" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quiz_option_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/op2"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_option_one" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quiz_option_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/op3"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_option_two" />

        <TextView
            android:id="@+id/quiz_question_feed_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/verifying_answer"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_next_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_option_three" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quiz_next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_button"
            android:text="@string/next_question"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>