<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragmentquiz"
            type="com.baig.quiz.fragments.FragmentQuiz" />
        <variable
            name="viewModel"
            type="com.baig.quiz.viewmodel.FragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnPrimary"
        tools:context=".fragments.FragmentQuiz">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/snap_bold_extra"
            android:text="@string/q_u_i_z"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/card_view_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/raw_quiz_img" />

                <TextView
                    android:id="@+id/heading"
                    android:text="@string/a_quiz_of_words"
                    android:fontFamily="@font/snap_bold_extra"
                    android:textSize="30sp"
                    android:paddingTop="20dp"
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                   />

                <TextView
                    android:id="@+id/dummy_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/play_this_game_to_review_reading_dear_salsabilla_all_the_hard_work_you_have_put_all_the_sacrifice_you_have_made_has_finally_paid_off" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="@{()-> fragmentquiz.navigate()}"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/snap_bold_extra"
                    android:text="@string/view_quiz"
                    android:textColor="?colorOnPrimary" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>